name:                qingting
version:             0.1.0.0
synopsis:            Linux server for dragonfly
description:         Please see README.md
homepage:            https://github.com/MarkMcCaskey/qingting#readme
license:             BSD3
license-file:        LICENSE
author:              Mark McCaskey
maintainer:          mmccask2@gmu.edu
copyright:           2016 Mark McCaskey
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , JSON
                     , Execute
  build-depends:       base >= 4.7 && < 5
                     , process
                     , websockets
                     , aeson
                     , bytestring
                     , unordered-containers
                     , text
  default-language:    Haskell2010

executable qingting
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , qingting
  default-language:    Haskell2010

test-suite qingting-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , qingting
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MarkMcCaskey/qingting
